<resources>
    <string name="app_name">KDemo</string>
    <string name="market_24xsl">量:%1$s</string>
    <string name="market_dw_w">万</string>
    <string name="time_min">分时</string>
    <string name="min_k">15分</string>
    <string name="hours_k">时K</string>
    <string name="days_k">日K</string>
    <string name="weeks_k">周K</string>
    <string name="btc_qc">
        {
    "datas": [
        {
            "date": "1545201456209",
            "symbol": "zbbtcqc",
            "ticker": {
                "lastRmb": "25510.73000000",
                "highdollar": "3742.69850000",
                "buyRmb": "25510.73000000",
                "buydollar": "3706.76960000",
                "last": "25510.73000000",
                "sell": "25510.76000000",
                "buy": "25510.73000000",
                "lowdollar": "3443.81150000",
                "lowRmb": "23701.00000000",
                "riseRate": "5.73",
                "dollar": "3706.76960000",
                "vol": "16167.5376",
                "high": "25758.00000000",
                "low": "23701.09000000",
                "highRmb": "25758.00000000",
                "selldollar": "3706.77390000",
                "sellRmb": "25510.76000000"
            },
            "cName": "中币",
            "moneyType": 1,
            "exeByRate": 1,
            "name": "zb",
            "coinName": "BTC",
            "type": 100
        }
    ]
}
    </string>
    <string name="open">开</string>
    <string name="close">收</string>
    <string name="rate">涨幅</string>
    <string name="market_24xszgj">最高</string>
    <string name="market_24xszdj">最低</string>
    <string name="market_24xscjl">成交量</string>
    <string name="entrust_time">委托时间</string>
    <string name="entrust_price">价格</string>
    <string name="entrust_num">委托量</string>
    <string name="fund_net">今日净流入：%s</string>
    <string name="fund_unit">单位：%s</string>
    <string name="real_time_capital_flow">实时资金流向</string>
    <string name="historical_capital_flow">历史资金流向</string>
    <string name="net_inflow_funds_5">近5日资金净流入</string>
    <string name="fund_transaction_distribution">资金成交分布</string>
    <string name="large_single_monitoring">大单监控</string>
    <string name="hcf_time">时间</string>
    <string name="hcf_buy">买入</string>
    <string name="hcf_sell">卖出</string>
    <string name="hcf_net_inflow">净流入</string>
    <string name="hcf_amount">金额(%s)</string>
    <string name="hcf_quantitative">数量(%s)</string>
    <string name="hcf_net_price">价格(%s)</string>
    <string name="now_no_data">暂时没有更多数据</string>
    <string name="now_big_no_data">暂时没有%s的成交大单数据</string>
</resources>