<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/match_wrap"
    android:background="@color/kbg"
    android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/status_bar_bg" />

            <LinearLayout
                android:id="@+id/ll_hcf"
                style="@style/match_wrap_h"
                android:gravity="center"
                android:minHeight="@dimen/margin_padding_40">

                <TextView
                    android:id="@+id/tv_0"
                    style="@style/tv_white_14_wei_h_l"
                    android:layout_width="0dp"
                    android:text="@string/hcf_time"
                    tools:ignore="Suspicious0dp" />

                <TextView
                    android:id="@+id/tv_1"
                    style="@style/tv_white_14_wei_h_r"
                    android:layout_width="0dp"
                    android:text="@string/hcf_buy"
                    tools:ignore="Suspicious0dp" />

                <TextView
                    android:id="@+id/tv_2"
                    style="@style/tv_white_14_wei_h_r"
                    android:layout_width="0dp"
                    android:text="@string/hcf_sell"
                    tools:ignore="Suspicious0dp" />

                <TextView
                    android:id="@+id/tv_3"
                    style="@style/tv_white_14_wei_h_r"
                    android:layout_width="0dp"
                    android:text="@string/hcf_net_inflow"
                    tools:ignore="Suspicious0dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/status_bar_bg" />

</LinearLayout>