<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_match">

    <LinearLayout
        android:id="@+id/linear_record"
        style="@style/match_match"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            style="@style/match_wrap"
            android:background="@color/kbg"
            android:orientation="horizontal"
            android:padding="@dimen/margin_padding_10">

            <TextView
                style="@style/tv_user_white_14"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_padding_10"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/entrust_time" />

            <TextView
                style="@style/tv_user_white_14"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_padding_10"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/entrust_price" />

            <TextView
                style="@style/tv_user_white_14"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_padding_10"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/entrust_num" />
        </LinearLayout>

        <com.dysen.kdemo.views.ScrollViewForList
            android:id="@+id/listview2"
            style="@style/keyboard_listView"
            android:layout_width="match_parent"
            android:layout_height="1200dp"
            android:layout_gravity="center"
            android:divider="@color/status_bar_bg"
            android:dividerHeight="1px" />
    </LinearLayout>

</ScrollView>